--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header">
             <div class="header-logo">
-                <img src="/asset/logo/logo.png" alt="">
+                <img src="./asset/logo/logo.png" alt="">
 
             </div>
             <div class="header-items">
@@ -102,7 +102,7 @@
         <!---cinsultation banner-->
         <div class="consultation">
             <div class="phone">
-                <img class="call-icon" src="/asset/icons/phone-call.png" alt="">
+                <img class="call-icon" src="./asset/icons/phone-call.png" alt="">
                 <h6>GET A FREE CONSULTATION <br>
                     987 233 0000</h6>
 
@@ -126,21 +126,21 @@
 
             <div class="blog-box">
                 <div class="blog-box-1">
-                    <img class="blog-image" src="/asset/image/blog-1.jpg" alt="">
+                    <img class="blog-image" src="./asset/image/blog-1.jpg" alt="">
                     <h2>Maxime rhoncus aliquet sint eu accusantium illum.</h2>
                     <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
                         nascetur?.....</p>
                 </div>
 
                 <div class="blog-box-1">
-                    <img class="blog-image" src="/asset/image/blog-1.jpg" alt="">
+                    <img class="blog-image" src="./asset/image/blog-1.jpg" alt="">
                     <h2>Maxime rhoncus aliquet sint eu accusantium illum.</h2>
                     <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
                         nascetur?.....</p>
                 </div>
 
                 <div class="blog-box-1">
-                    <img class="blog-image" src="/asset/image/blog-1.jpg" alt="">
+                    <img class="blog-image" src="./asset/image/blog-1.jpg" alt="">
                     <h2>Maxime rhoncus aliquet sint eu accusantium illum.</h2>
                     <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
                         nascetur?.....</p>
@@ -154,12 +154,12 @@
         <!---Last page-->
         <div class="last-page">
             <div class="first-line">
-                <img src="/asset/logo/logo.png" alt="">
+                <img src="./asset/logo/logo.png" alt="">
                 <p class="last-page-para">Auctor blandit dolorem primis eius odit soluta <br> molestie? Malesuada elementum aut doloremque labo.</p>
                 <ul class="last-page-ul">
-                    <li><img class="last-page-icon" src="/asset/icons/facebook.png" alt=""></li>
-                    <li><img class="last-page-icon" src="/asset/icons/google.png" alt=""></li>
-                    <li><img class="last-page-icon" src="/asset/icons/whatsapp.png" alt=""></li>
+                    <li><img class="last-page-icon" src="./asset/icons/facebook.png" alt=""></li>
+                    <li><img class="last-page-icon" src="./asset/icons/google.png" alt=""></li>
+                    <li><img class="last-page-icon" src="./asset/icons/whatsapp.png" alt=""></li>
                 </ul>
 
             </div>
